<resources>
    <string name="app_name">Travelling</string>
    <string name="splashscreenimg">splashScreenImg</string>
    <string name="logo_bg">logo_bg</string>
    <string name="title_activity_home">ActivityHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_bus">Search Bus</string>
    <string name="select_date">Select Date</string>
    <string name="where_will_you_ngo_today">WHERE WILL YOU\nGO TODAY?</string>
    <string name="welcome">Welcome ....</string>
    <string name="to">To</string>
    <string name="pessengers">Pessengers</string>
    <string name="_0">0</string>
    <string name="date">Date</string>
    <string name="executive">Executive</string>
    <string name="premium">Premium</string>
    <string name="ekonomi">Ekonomi</string>
    <string name="from">From</string>
    <string name="price">Price</string>
    <string name="rp_50_000">Rp. 50.000</string>
    <string name="probolinggo">Probolinggo</string>
    <string name="arrival">Arrival</string>
    <string name="book_now">Book Now</string>
    <string name="departure">Departure</string>
    <string name="_10_11_2022">10/11/2022</string>
    <string name="name_bus">Name Bus</string>
    <string name="PaymentSucess">Transaction Success</string>
    <string name="DescriptionPayment">Yes! enjoy your bill. Don’t\nForget to check on your history</string>
    <string name="capt_about">Travelgo merupakan sebuah aplikasi layanan transportasi yang bertujuan untuk membantu masyarakat yang ingin berpergian menggunakan bus transportasi, memesan dengan kemudahan dalam satu genggaman aplikasi. Bekerja sama dengan agen bus di indonesia yang aman dan terpercaya.</string>
    <string name="untuk_keluhan_kritik_dan_saran_dalam_penggunaan_naplikasi_travelgo_anda_dapat_menghubungi">Untuk keluhan, kritik, dan saran dalam penggunaan\naplikasi Travelgo, Anda dapat menghubungi:</string>
    <string name="aplikasi_versi_1_0_travelgo">Aplikasi versi 1.0 Travelgo</string>
    <string name="instagram_logo">instagram_logo</string>
    <string name="rizky_faisal_rafi">Rizky Faisal Rafi</string>
    <string name="wahyu_adi_saputro">Wahyu Adi Saputro</string>
    <string name="linda_uswatun_hasanah">Linda Uswatun Hasanah</string>
    <string name="back">back</string>
    <string name="book_a_trip">Book a trip</string>
    <string name="rating">Rating</string>
    <string name="_8_7_5">8.7/5</string>
    <string name="terminal_probolinggo">Terminal Probolinggo</string>
    <string name="_17_00">17.00</string>
    <string name="_2_hours">-- 2 hours --</string>
    <string name="too">-- to --</string>
    <string name="surabaya">Surabaya</string>
    <string name="terminal_bungurasih">Terminal Bungurasih</string>
    <string name="_19_00">19.00</string>
    <string name="friday_10_des_2020">Friday, 10 Des 2020</string>
    <string name="_2_passengers">2 Passengers</string>
    <string name="available_seat">Available seat</string>
    <string name="_24_seat_are_available">24 Seat are available</string>

    <string name="economy">Economy</string>
    <string name="classs">Class</string>
    <string name="facility">Facility</string>
    <string name="icon">icon</string>
    <string name="ac">AC</string>
    <string name="choose_seats">Choose Seats</string>
    <string name="choose">Choose</string>
    <string name="payment_method">Payment Method</string>
    <string name="_100_000">100.000</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nomor_telephone">Nomor Telephone</string>
    <string name="update">Update</string>
    <string name="hello_dunia">Hello Dunia!</string>
    <string name="notification">Notification</string>
    <string name="nothing_in_notification">Nothing in Notification</string>
    <string name="tanggal">Tanggal</string>
    <string name="paiton">Paiton</string>
    <string name="penghubung">-</string>
    <string name="selesai">Selesai</string>
    <string name="passengers">Passengers</string>
    <string name="seat">Seat</string>
    <string name="barcode">Barcode</string>
    <string name="ticket">Ticket</string>
    <string name="total_price">Total Price</string>
    <string name="back_to_home">Back To Home</string>
    <string name="bus_not_found">Bus not found</string>
    <string name="booked">Booked</string>
    <string name="available">Available</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_daftar_dengan_google">Masuk / Daftar Dengan Google</string>
    <string name="anggota_baru">Anggota baru?</string>
    <string name="daftar">Daftar</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="beranda">Beranda</string>
    <string name="akun">Akun</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="klik_untuk_edit_profile_anda">Klik untuk edit profile Anda</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="lihat_informasi_lengkap_tentang_aplikasi">Lihat informasi lengkap tentang aplikasi</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string name="klik_untuk_keluar_dari_akun_anda">Klik untuk keluar dari akun Anda</string>
    <string name="sampaikan_kendala_kritik_dan_saran_anda">Sampaikan kendala kritik dan saran Anda</string>
    <string name="_2hr_5m">2hr 5m</string>
    <string name="terminal_surabaya">Terminal Surabaya</string>
    <string name="_8_7">8.7</string>
    <string name="bca">BCA</string>
    <string name="nama_bus">Nama Bus</string>
    <string name="_2">2</string>
    <string name="rp">Rp.</string>
    <string name="harga">Harga</string>
    <string name="history">History</string>
    <string name="history_pesanan">History Pesanan</string>

    <!-- array spiner -->
    <string-array name="Kota">
        <item>-- Select Departure --</item>
        <item>Probolinggo</item>
        <item>Pasuruan</item>
        <item>Surabaya</item>
        <item>Malang</item>
        <item>Gresik</item>

    </string-array>
    <string-array name="Tujuan">
        <item>-- Select Arrival --</item>
        <item>Probolinggo</item>
        <item>Pasuruan</item>
        <item>Surabaya</item>
        <item>Malang</item>
        <item>Gresik</item>

    </string-array>
</resources>