<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"

        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/namebus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/name_bus"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cardstar"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="13dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/cardstar"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="75dp"
                    android:src="@drawable/star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/cardstar"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="57dp"
                    android:src="@drawable/star_half" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/cardstar"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="8.7/5" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/typeBus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="Ekonomi"
            android:textColor="@color/small_text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--            <ImageView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_margin="11dp"-->
            <!--                android:src="@drawable/from"/>-->
            <TextView
                android:id="@+id/time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:text="17.00"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="Pick Up"
                    android:textColor="@color/small_text" />

                <TextView
                    android:id="@+id/dari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/probolinggo"
                    android:textColor="@color/small_text" />
            </LinearLayout>


            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:fontFamily="@font/nunito_regular"
                android:text="2 Hours"
                android:textColor="@color/small_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:text="19.00"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="Drop Off"
                    android:textColor="@color/small_text" />

                <TextView
                    android:id="@+id/tiba"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="11dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/probolinggo"
                    android:textColor="@color/small_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/price"
                    android:textColor="@color/small_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/rp_50_000"
                    android:textColor="#364767"
                    android:textSize="15dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>