<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/card"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/decor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/namebus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/name_bus"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2hr 5m "
            android:textColor="@color/small_text"
            app:layout_constraintStart_toEndOf="@+id/namebus"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="19dp"/>

        <TextView
            android:id="@+id/typeBus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ekonomi"
            android:textColor="@color/small_text"
            app:layout_constraintTop_toBottomOf="@+id/namebus"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/typeBus"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="15dp"
            android:text="17.00"
            android:fontFamily="@font/nunito_semi_bold"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/probolinggo"
            android:textColor="@color/small_text"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/time_start"
            app:layout_constraintTop_toBottomOf="@+id/typeBus" />

        <TextView
            android:id="@+id/time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/time_start"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="19.00"
            android:fontFamily="@font/nunito_semi_bold"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tiba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/nunito_regular"
            android:text="Terminal Surabaya"
            android:textColor="@color/small_text"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/time_end"
            app:layout_constraintTop_toBottomOf="@+id/dari" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/decor2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginEnd="36dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/rp_50_000"
            android:textColor="#364767"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_end"/>

        <ImageView
            android:id="@+id/decor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_end"
            android:layout_margin="15dp"
            android:src="@drawable/star" />
        <ImageView
            android:id="@+id/decor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/decor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_end"
            android:src="@drawable/star_half" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/decor2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_end"
            android:text="8.7"
            android:fontFamily="@font/nunito_semi_bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>